Add access control groups to routes API request and response
